refactor(audit): simplify collection operation in AuditLogService